--- a/05_Repetitive/05_Repetitive.vcxproj.filters
+++ b/05_Repetitive/05_Repetitive.vcxproj.filters
@@ -36,5 +36,20 @@
     <ClCompile Include="Practice03.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exam04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Exam05.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Exam06.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice05.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
