--- a/06_Function/06_Function.vcxproj.filters
+++ b/06_Function/06_Function.vcxproj.filters
@@ -30,5 +30,17 @@
     <ClCompile Include="Practice02.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exam03.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Exam04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice03.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
