--- a/08_Pointer/08_Pointer.vcxproj.filters
+++ b/08_Pointer/08_Pointer.vcxproj.filters
@@ -27,5 +27,26 @@
     <ClCompile Include="Exam03.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exam04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Exam05.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice01.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice02.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice03.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice05.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
