--- a/09_Sturct/09_Sturct.vcxproj.filters
+++ b/09_Sturct/09_Sturct.vcxproj.filters
@@ -24,5 +24,17 @@
     <ClCompile Include="Exam02.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exam03.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Exam04.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practice2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
